# Discord_Role-DM-Alerts

./: README.md  pyproject.toml  requirements.txt
src/: env  main.py
src/bot/: bot.py  utils.py  views.py
src/bot/cogs/: admin.py  events.py
src/bot/ext/: utils.py  views.py
